--- a/RaelEstateApi/RealEstate.html
+++ b/RaelEstateApi/RealEstate.html
@@ -8,6 +8,7 @@
     <link href="Styles/main-styles.css" rel="stylesheet" />
 	<script src="Scripts/libs/jquery-2.0.3.js"></script>
 	<script src="Scripts/libs/kendo.web.min.js"></script>
+    <script src="Scripts/libs/bootstrap.js"></script>
 	<script src="Scripts/libs/rsvp.min.js"></script>
     <script src="Scripts/app/httpRequester.js"></script>
 	<script src="Scripts/libs/class.js"></script>
@@ -24,9 +25,6 @@
 	</header>
 	<div id="app">
 	</div>
-	<footer>
-		<h2 class="btn btn-inverse">Neodimyium </h2>
-	</footer>
         </div>
 </body>
 </html>
