--- a/RaelEstateApi/RealEstate.html
+++ b/RaelEstateApi/RealEstate.html
@@ -19,8 +19,8 @@
 	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
 </head>
 <body>
-    <div id="wrapper">
-	<header class="btn btn-info">
+    <div id="wrapper" class="fluid-grid clearfix">
+	<header class="span12 btn btn-info">
 		<h1>Neodimyium Real Estate Agency</h1>
 	</header>
 	<div id="app">
