--- a/RaelEstateApi/RealEstate.html
+++ b/RaelEstateApi/RealEstate.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div id="wrapper" class="fluid-grid clearfix">
-	<header class="text-center span12 btn btn-info">
+	<header class="span12 btn btn-info">
 		<h1>Neodimyium Real Estate Agency</h1>
 	</header>
 	<div id="app">
