add admin pannel

--- a/RaelEstateApi/RealEstate.html
+++ b/RaelEstateApi/RealEstate.html
@@ -8,6 +8,7 @@
     <link href="Styles/main-styles.css" rel="stylesheet" />
 	<script src="Scripts/libs/jquery-2.0.3.js"></script>
 	<script src="Scripts/libs/kendo.web.min.js"></script>
+    <script src="Scripts/app/grid.js"></script>
     <script src="Scripts/libs/bootstrap.js"></script>
 	<script src="Scripts/libs/rsvp.min.js"></script>
     <script src="Scripts/app/httpRequester.js"></script>
