--- a/RaelEstateApi/AdminDemo/layout.html
+++ b/RaelEstateApi/AdminDemo/layout.html
@@ -1,36 +1,13 @@
-﻿<script type="text/x-kendo-template" id="layout">
+﻿<script type="text/x-kendo-template" id="layout-admin">
+
     <header>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p class="site-title"><a href="">http://asp.net</a></p>
-            </div>
-            <div class="float-right">
-                <section id="login">
-                    <ul>
-                        <li><a href="/Account/Register" id="registerLink">Register</a></li>
-                        <li><a href="/Account/Login" id="loginLink">Log in</a></li>
-                    </ul>
-                </section>
-                <nav>
-                    <ul id="menu">
-                        <li><a href="#/" >Home</a></li>
-                        <li><a href="#/about" >About</a></li>
-                        <li><a href="#/contact">Contact</a></li>                   
-                        <li><a href="#/customers" >Customers</a></li>
-                        <li><a href="#/categories" >Categories</a></li>
-                        <li><a href="#/products" >Products</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+      <span><a href="#/edit-adverts" class='btn btn-info'>Edit Adverts</a></span>
+      <span><a href="#/" class='btn btn-info'>Edit Users</a></span>
+      <span><a href="#/" class='btn btn-info'>General edit</a></span>
+     <br/>
     </header>
     <div id="body">
+    
     </div>
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p>&copy; 2013 - My ASP.NET MVC Application</p>
-            </div>
-        </div>
-    </footer>
+
 </script>
