--- a/RaelEstateApi/Copy of RealEstate.html
+++ b/RaelEstateApi/Copy of RealEstate.html
@@ -1,31 +1,49 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title></title>
+    <title></title>
     <link href="Styles/kendo.common.min.css" rel="stylesheet" />
     <link href="Styles/kendo.silver.min.css" rel="stylesheet" />
     <link href="Styles/bootstrap.min.css" rel="stylesheet" />
     <link href="Styles/main-styles.css" rel="stylesheet" />
-	<script src="Scripts/libs/jquery-2.0.3.js"></script>
-	<script src="Scripts/libs/kendo.web.min.js"></script>
-    <script src="Scripts/app/grid.js"></script>
+    <script src="Scripts/libs/jquery-2.0.3.js"></script>
+    <script src="Scripts/libs/kendo.web.min.js"></script>
     <script src="Scripts/libs/bootstrap.js"></script>
-	<script src="Scripts/libs/rsvp.min.js"></script>
+    <script src="Scripts/libs/rsvp.min.js"></script>
     <script src="Scripts/app/httpRequester.js"></script>
-	<script src="Scripts/libs/class.js"></script>
-	<script src="Scripts/app/data.js"></script> 
-	<script src="Scripts/app/view-models.js"></script>
-	<script src="Scripts/app/views.js"></script>
-	<script src="Scripts/app.js"></script>
-	<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
+    <script src="Scripts/libs/class.js"></script>
+    <script src="Scripts/app/data.js"></script>
+    <script src="Scripts/app/view-models.js"></script>
+    <script src="Scripts/app/views.js"></script>
+    <script src="Scripts/app.js"></script>
+    <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha1.js"></script>
 </head>
 <body>
-    <div id="wrapper" class="fluid-grid clearfix">
-	<header class="span12 btn btn-info">
-		<h1>Neodimyium Real Estate Agency</h1>
-	</header>
-	<div id="app">
-	</div>
+    <div id="myCarousel" class="carousel slide">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" class="active" data-slide-to="0"></li>
+            <li data-target="#myCarousel" class="" data-slide-to="1"></li>
+            <li data-target="#myCarousel" class="" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item">
+                <img width="100" src="http://www.allenauctionandrealestate.com/house_for_sale.jpg" alt="">
+
+            </div>
+            <div class="item">
+                <img width="100" src="http://www.serenitysettlements.com/img/image-10.jpg" alt="">
+
+            </div>
+            <div class="item active">
+                <img width="100" src="http://www.agoracosmopolitan.com/news-img/maximum/9554.jpg" alt="">
+            </div>
         </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+    </div>
+
+    <script>
+        $("#myCarousel").carousel();
+    </script>
 </body>
 </html>
