--- a/RaelEstateApi/AdminDemo/layout.html
+++ b/RaelEstateApi/AdminDemo/layout.html
@@ -1,13 +1,16 @@
 ﻿<script type="text/x-kendo-template" id="layout-admin">
 
-    <header>
-      <span><a href="#/edit-adverts" class='btn btn-info'>Edit Adverts</a></span>
-      <span><a href="#/" class='btn btn-info'>Edit Users</a></span>
-      <span><a href="#/" class='btn btn-info'>General edit</a></span>
-     <br/>
-    </header>
+    <div id="admin-panel">
+        <div class="btn-group">
+            <span><a href="#/special" class="btn btn-info">Home</a></span>
+            <span><a href="#/edit-adverts" class="btn btn-info">Edit Adverts</a></span>
+            <span><a href="#/" class="btn btn-info">Edit Users</a></span>
+            <span><a href="#/" class="btn btn-info">General edit</a></span>
+            <!--<br />-->
+        </div>
+    </div>
     <div id="body">
-    
+
     </div>
 
 </script>
