--- a/RaelEstateApi/AdminDemo/products.html
+++ b/RaelEstateApi/AdminDemo/products.html
@@ -44,7 +44,7 @@
                 transport: {
                     read: {
                         //url: "http://demos.kendoui.com/service/Northwind.svc/Employees",
-                        url: "http://localhost:38338/api/adverts/",
+                        url: "http://neodymiumestates.apphb.com/api/adverts/",
                         dataType: "json"
                     },
                 },
